--- a/demo/addons/godot-git-plugin/plugin.cfg
+++ b/demo/addons/godot-git-plugin/plugin.cfg
@@ -1,7 +1,7 @@
 [plugin]
 
 name="Godot Git Plugin"
-description="This plugin lets you interact with Git without leaving the Godot editor. More information can be found at https://github.com/godotengine/godot-git-plugin/wiki"
-author="twaritwaikar"
+description="This plugin lets you interact with Git without leaving the Godot editor. More information can be found at https://github.com/godotengine/godot-git-plugin/wiki. Patched to fetch credentials from credential-manager."
+author="twaritwaikar, WoMa-Entertainment"
 version="v3.0.0-beta1"
 script="godot-git-plugin.gd"
